[package]
name = "bevy_mod_raycast"
version = "0.16.0"
authors = ["Aevyrie <aevyrie@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Ray Casting for the Bevy Engine."
repository = "https://github.com/aevyrie/bevy_mod_raycast/"
keywords = ["gamedev", "graphics", "bevy", "3d", "raycast"]
categories = ["game-engines", "rendering"]
resolver = "2"

[dependencies]
bevy_app = { git = 'https://github.com/ickshonpe/bevy/', rev = 'eff47e6d25e56d747df45af4ba33e9f160efe87d', default-features = false }
bevy_asset = { git = 'https://github.com/ickshonpe/bevy/', rev = 'eff47e6d25e56d747df45af4ba33e9f160efe87d', default-features = false }
bevy_derive = { git = 'https://github.com/ickshonpe/bevy/', rev = 'eff47e6d25e56d747df45af4ba33e9f160efe87d', default-features = false }
bevy_ecs = { git = 'https://github.com/ickshonpe/bevy/', rev = 'eff47e6d25e56d747df45af4ba33e9f160efe87d', default-features = false }
bevy_gizmos = { git = 'https://github.com/ickshonpe/bevy/', rev = 'eff47e6d25e56d747df45af4ba33e9f160efe87d', default-features = false, optional = true }
bevy_math = { git = 'https://github.com/ickshonpe/bevy/', rev = 'eff47e6d25e56d747df45af4ba33e9f160efe87d', default-features = false }
bevy_reflect = { git = 'https://github.com/ickshonpe/bevy/', rev = 'eff47e6d25e56d747df45af4ba33e9f160efe87d', default-features = false }
bevy_render = { git = 'https://github.com/ickshonpe/bevy/', rev = 'eff47e6d25e56d747df45af4ba33e9f160efe87d', default-features = false }
bevy_sprite = { git = 'https://github.com/ickshonpe/bevy/', rev = 'eff47e6d25e56d747df45af4ba33e9f160efe87d', default-features = false, optional = true }
bevy_transform = { git = 'https://github.com/ickshonpe/bevy/', rev = 'eff47e6d25e56d747df45af4ba33e9f160efe87d', default-features = false }
bevy_utils = { git = 'https://github.com/ickshonpe/bevy/', rev = 'eff47e6d25e56d747df45af4ba33e9f160efe87d', default-features = false }
bevy_window = { git = 'https://github.com/ickshonpe/bevy/', rev = 'eff47e6d25e56d747df45af4ba33e9f160efe87d', default-features = false }
crossbeam-channel = "0.5"

[dev-dependencies]
bevy = { git = 'https://github.com/ickshonpe/bevy/', rev = 'eff47e6d25e56d747df45af4ba33e9f160efe87d', default-features = true, features = [
    "default_font",
    "ktx2",
    "tonemapping_luts",
    "x11",
    "zstd",
] }
criterion = "0.5"

[features]
default = ["2d", "debug"]
2d = ["bevy_sprite"]
debug = ["bevy_gizmos"]

[[bench]]
name = "ray_mesh_intersection"
harness = false
